# omnigres

./: 404.html  CMakeLists.txt  Dockerfile  README.md  generate-upgrades.sh  index.html  sitemap.xml  versions.txt
.github/workflows/: build.yml  gh-cleanup.yml
Dynpgext/intro/: index.html
Dynpgext/usage/: index.html
_cli/: builder.lgt  loader.lgt
cli/: CMakeLists.txt  cli.lgt  errors.pl  loader.lgt  main.c  omnigres.lgt  pgwire.lgt  pkgconfig.lgt  postgres.lgt
cli/cmake/: Logtalk.cmake  SWIprolog.cmake
cli/omnigres/: go.mod  go.sum  main.go
cli/omnigres/cmd/: completion.go  root.go
cli/omnigres/cmd/new/: build.go  command.go  project_name.go  screen.go
cli/omnigres/download/: download.go
cli/omnigres/omnigres/: config.go  omnigres.go
cli/omnigres/project/: config.go
cli/omnigres/style/: style.go
cli/omnigres/tui/: completable.go  update.go
cli/omnigres/tui/message/: message.go
cli/omnigres/tui/progress/: progress.go
cmake/: FindH2O.cmake  FindPostgreSQL.cmake  FindWslay.cmake  Logtalk.cmake  OpenSSL.cmake  PostgreSQLExtension.cmake  SWIprolog.cmake
docker/initdb-slim/: 005-http-handler.sql.templ
examples/motd/: index.html
examples/paste/: 0_basic.sql
extensions/: CMakeLists.txt
extensions/omni/: hook_harness.c  init.c  omni.c  omni_common.h
extensions/omni_aws/: CMakeLists.txt  omni_aws--0.1.sql
extensions/omni_aws/tests/: test.yml
extensions/omni_ext/tests/: tests.yml
extensions/omni_git/: CMakeLists.txt  alloc.c  alloc.h  config.c  config.h  omni_git--0.1.sql  omni_git.c
extensions/omni_guard/: .psqlrc  CMakeLists.txt  README.md  guard.cpp  mkdocs.yml  omni_guard.c  omni_guard.h  pg_nodetypes.cpp
extensions/omni_httpc/: omni_httpc.c
extensions/omni_httpc/tests/: test.yml
extensions/omni_httpd/: .psqlrc  CHANGELOG.md  CMakeLists.txt  event_loop.c  event_loop.h  http_worker.c  http_worker.h  master_worker.c  omni_httpd.c  omni_httpd.h  post_upgrade.sql  pre_upgrade.sql  websocketclient.c  websocketclient.h
extensions/omni_httpd/expected/: http2_reproxy.out
extensions/omni_httpd/migrate/: 1_basic_types.sql  2_listeners.sql  4_handler.sql  8_websocket.sql
extensions/omni_httpd/sql/: http2_reproxy.sql
extensions/omni_httpd/tests/: http.yml
extensions/omni_int/: CMakeLists.txt  README.md  int1.c  mkdocs.yml  omni_int.c  omni_int.h
extensions/omni_int/migrate/: 1_types.sql
extensions/omni_js/: CMakeLists.txt  omni_js--0.1.sql  omni_js.c
extensions/omni_ledger/: mkdocs.yml  omni_ledger.c
extensions/omni_ledger/migrate/: 1_core.sql  2_accounting.sql
extensions/omni_ledger/src/: _is_inherited_type.sql  debit_normal.sql  ensure_affected_accounts_accounting_balances.sql
extensions/omni_ledger/tests/: ledger.yaml
extensions/omni_pki/: CMakeLists.txt  README.md  mkdocs.yml  omni_pki--0.1.sql  omni_pki.c
extensions/omni_python/src/: functions.py
extensions/omni_python/tests/: omni_python.yml  omni_python_flask.yml
extensions/omni_rest/src/: _postgrest_function.sql  postgrest_get.sql  postgrest_rpc.sql  postgrest_update.sql
extensions/omni_rest/tests/: get-horizontal-filtering.yml  rpc.yml  update.yml
extensions/omni_schema/src/: meta.sql
extensions/omni_schema/src/meta/: catalog.sql
extensions/omni_schema/tests/: meta_diff_type.yml  test.yml
extensions/omni_sql/: CMakeLists.txt  extended_sql.c  omni_sql--0.1.sql  omni_sql.c  omni_sql.h  test.yml
extensions/omni_sql/src/: execute.sql
extensions/omni_txn/: retry.c
extensions/omni_types/: test.yml  unit.c
extensions/omni_types/tests/: sum_type.yml  unit.yml
extensions/omni_vfs/: omni_vfs--0.1.sql  omni_vfs.c
extensions/omni_vfs/tests/: common.yml  local_fs.yml  table_fs.yml
extensions/omni_vfs_gistfs/: CMakeLists.txt
extensions/omni_vfs_gistfs/migrate/: 1_instantiate_gistfs.sql
extensions/omni_vfs_gistfs/src/: instantiate_gistfs.sql
extensions/omni_web/tests/: urlencode.yml
languages/python/omni_python/: CMakeLists.txt  pyproject.toml
languages/python/omni_python/src/omni_python/: __init__.py  dbapi.py  types.py
misc/inja/: inja.cpp
omni/omni/: omni_v0.h
omni_containers/intro/: index.html
omni_ext/intro/: index.html
omni_httpc/reference/: index.html
omni_httpd/architecture/: index.html
omni_httpd/headers/: index.html
omni_httpd/intro/: index.html
omni_httpd/reverse_proxy/: index.html
omni_httpd/security/: index.html
omni_schema/: CMakeLists.txt  boot.lgt  env.fish  loader.lgt  main.c
omni_schema/cmake/: Logtalk.cmake  SWIprolog.cmake
omni_seq/id/: index.html
omni_types/sum_types/: index.html
omni_web/intro/: index.html
omni_web/query_strings/: index.html
pg_yregress/: CMakeLists.txt  instance.c  pg_yregress.c  pg_yregress.h  test.c  test.yml
pg_yregress/_install/: index.html
pg_yregress/install/: index.html
pg_yregress/intro/: index.html
pg_yregress/lgt/: loader.lgt  pg_yregress.lgt  test.lgt
pg_yregress/usage/: index.html
quick_start/: index.html
search/: search_index.json
